--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ services:
   - docker
 before_install:
   - docker run -p 6379:6379 -d redis
+  - nvm install 9
+  - npm install js-yaml shelljs
+  - node .travis/inject-dependencies.js
 script:
   - env REDIS_URL=redis://localhost:6379 crystal spec
